--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -10,12 +10,12 @@
 # bluesky_url: # your bluesky URL
 # dblp_url: # your DBLP profile url
 # discord_id: # your discord id (18-digit unique numerical identifier)
-email: zacharie.van-herstraeten@inria.fr # your email address
+# email: zacharie.van-herstraeten@inria.fr # your email address
 # facebook_id: # your facebook id
 # flickr_id: # your flickr id
-# github_username: # your GitHub user name
+github_username: zac-vh # your GitHub user name
 # gitlab_username: # your GitLab user name
-# hal_id: # your HAL id (https://hal.science/)
+hal_id: zacharie-van-herstraeten # your HAL id (https://hal.science/)
 # ieee_id: # your ieeexplore.ieee.org/author/id
 inspirehep_id: 1953485 # Inspire HEP author ID
 # instagram_id: # your instagram id
@@ -24,16 +24,16 @@ inspirehep_id: 1953485 # Inspire HEP author ID
 # lastfm_id: # your lastfm id
 # lattes_id: # your ID on Lattes (Brazilian Lattes CV)
 # leetcode_id: # your LeetCode id
-# linkedin_username: # your LinkedIn user name
+linkedin_username: zacharie-van-herstraeten-810023141 # your LinkedIn user name
 # mastodon_username: # your mastodon instance+username in the format instance.tld/@username
 # medium_username: # your Medium username
-# orcid_id: # your ORCID ID
+orcid_id: 0000-0003-1810-0942 # your ORCID ID
 # osf_id: # your OSF ID
 # pinterest_id: # your pinterest id
 # publons_id: # your ID on Publons
 # quora_username: # your Quora username
-# research_gate_profile: # your profile on ResearchGate
-rss_icon: true # comment this line to hide the RSS icon
+research_gate_profile: Zacharie-Van-Herstraeten # your profile on ResearchGate
+# rss_icon: true # comment this line to hide the RSS icon
 scholar_userid: SyKuBvQAAAAJ # your Google Scholar ID
 # scopus_id: # your profile on Scopus
 # semanticscholar_id: # your Semantic Scholar ID
@@ -46,11 +46,11 @@ scholar_userid: SyKuBvQAAAAJ # your Google Scholar ID
 # whatsapp_number: # your WhatsApp number (full phone number in international format. Omit any zeroes, brackets, or dashes when adding the phone number in international format.)
 # wikidata_id: # your wikidata id
 # wikipedia_id: # your wikipedia id (Case sensitive)
-# work_url: # work page URL
+work_url: https://qat.inria.fr/presentation/ # work page URL
 # x_username: # your X handle
 # youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
 # zotero_username: # your zotero username
-custom_social: # can be any name here other than the ones already defined above
-  logo: https://www.alberteinstein.com/wp-content/uploads/2024/03/cropped-favicon-192x192.png # can be png, svg, jpg
-  title: Custom Social
-  url: https://www.alberteinstein.com/
+# custom_social: # can be any name here other than the ones already defined above
+#   logo: https://www.alberteinstein.com/wp-content/uploads/2024/03/cropped-favicon-192x192.png # can be png, svg, jpg
+#   title: Custom Social
+#   url: https://www.alberteinstein.com/
