Update CV & socials

--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,18 +2,18 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
+      value: Zacharie Van Herstraeten
     - name: Date of Birth
-      value: 14th March 1879
+      value: 23rd August 1994
     - name: Languages
-      value: English, German
+      value: French, English
 
 - title: Education
   type: time_table
   contents:
     - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+      institution: Université libre de Bruxelles, Belgium
+      year: 2021
       description:
         - Description 1.
         - Description 2.
