--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -15,9 +15,9 @@
 # flickr_id: # your flickr id
 github_username: zac-vh # your GitHub user name
 # gitlab_username: # your GitLab user name
-hal_id: zacharie-van-herstraeten # your HAL id (https://hal.science/)
+# hal_id: zacharie-van-herstraeten # your HAL id (https://hal.science/)
 # ieee_id: # your ieeexplore.ieee.org/author/id
-inspirehep_id: 1953485 # Inspire HEP author ID
+# inspirehep_id: 1953485 # Inspire HEP author ID
 # instagram_id: # your instagram id
 # kaggle_id: # your kaggle id
 # keybase_username: # your keybase user name
@@ -46,7 +46,7 @@ scholar_userid: SyKuBvQAAAAJ # your Google Scholar ID
 # whatsapp_number: # your WhatsApp number (full phone number in international format. Omit any zeroes, brackets, or dashes when adding the phone number in international format.)
 # wikidata_id: # your wikidata id
 # wikipedia_id: # your wikipedia id (Case sensitive)
-work_url: https://qat.inria.fr/presentation/ # work page URL
+# work_url: https://qat.inria.fr/presentation/ # work page URL
 # x_username: # your X handle
 # youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
 # zotero_username: # your zotero username
