--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -32,7 +32,7 @@ orcid_id: 0000-0003-1810-0942 # your ORCID ID
 # pinterest_id: # your pinterest id
 # publons_id: # your ID on Publons
 # quora_username: # your Quora username
-research_gate_profile: Zacharie-Van-Herstraeten # your profile on ResearchGate
+# research_gate_profile: Zacharie-Van-Herstraeten # your profile on ResearchGate
 # rss_icon: true # comment this line to hide the RSS icon
 scholar_userid: SyKuBvQAAAAJ # your Google Scholar ID
 # scopus_id: # your profile on Scopus
@@ -50,7 +50,7 @@ scholar_userid: SyKuBvQAAAAJ # your Google Scholar ID
 # x_username: # your X handle
 # youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
 # zotero_username: # your zotero username
-# custom_social: # can be any name here other than the ones already defined above
-#   logo: https://www.alberteinstein.com/wp-content/uploads/2024/03/cropped-favicon-192x192.png # can be png, svg, jpg
-#   title: Custom Social
-#   url: https://www.alberteinstein.com/
+custom_social: # can be any name here other than the ones already defined above
+  logo: arxiv.svg # can be png, svg, jpg
+  title: arXiv
+  url: https://arxiv.org/search/?searchtype=author&query=Van+Herstraeten%2C+Z
