--- a/_config.yml
+++ b/_config.yml
@@ -7,10 +7,10 @@ first_name: Z
 middle_name:
 last_name: VH
 contact_note: >
-  You can even add a little note about which of these is the best way to reach you.
+  You can always reach me at zacharie.van-herstraeten@inria.fr
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
-footer_text:
+footer_text: 
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   # Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
   # Photos from <a href="https://unsplash.com" target="_blank">Unsplash</a>.
